<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/about_devicepulse"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/versionText"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/privacyPolicy"
            android:text="@string/privacy_policy"
            android:textSize="16sp"
            android:textColor="@color/secondary_accent"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/terms"
            android:text="@string/terms_amp_conditions"
            android:textSize="16sp"
            android:textColor="@color/secondary_accent"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/contactEmail"
            android:text="@string/contact_developer"
            android:textSize="16sp"
            android:textColor="@color/secondary_accent"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/github"
            android:text="@string/github_profile"
            android:textSize="16sp"
            android:textColor="@color/secondary_accent"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>